prevent fit images from stretching

--- a/css/source/custom/layouts.scss
+++ b/css/source/custom/layouts.scss
@@ -266,6 +266,8 @@ body.reveal-ready {
   section img[data-imagefit] {
     width: 100%;
     height: 100%;
+    object-fit: contain;
+    object-position: center;
   }
 
   section video[data-imagefit] {
